tests/errors/continue_compilation_ff_1.f
      program continue_compilation_1

      print *, dshiftl(1, 2, 34)
      print *, dshiftl(1, 2, -2)

      end program
